# ChangeLog for media-plugins/audacious-plugins
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.274 2014/01/28 14:10:03 ago Exp $

  16 May 2014; Poncho <poncho@spahan.ch> audacious-plugins-3.5.ebuild:
  media-plugins/audacious-plugins: depend on media-libs/libsdl[sound]

*audacious-plugins-3.5 (24 Apr 2014)

  24 Apr 2014; Poncho <poncho@spahan.ch> +audacious-plugins-3.5.ebuild,
  -audacious-plugins-3.4.3.ebuild, -audacious-plugins-3.5_beta1.ebuild,
  -files/notificationsupport.patch:
  media-plugins/audacious-plugins: version bump

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for alpha, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for ppc64, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for ppc, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for x86, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for amd64, wrt bug #490463

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for sparc, wrt bug #490463

  24 Jan 2014; Jeroen Roovers <jer@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for HPPA (bug #490463).

  26 Dec 2013; Markus Meier <maekke@gentoo.org> audacious-plugins-3.4.1.ebuild:
  add ~arm, bug #489352

  01 Oct 2013; Samuli Suominen <ssuominen@gentoo.org>
  audacious-plugins-3.4.1.ebuild:
  Raise libsidplayfp dependency from 0.3.8 to 1.0.0 wrt #483966 by Torsten
  Kaiser

*audacious-plugins-3.4.1 (02 Sep 2013)

  02 Sep 2013; Jeff Horelick <jdhore@gentoo.org>
  +audacious-plugins-3.4.1.ebuild:
  Version bump

*audacious-plugins-3.3.4 (07 Feb 2013)

  07 Feb 2013; Jeff Horelick <jdhore@gentoo.org>