@@ -1,1 +1,1 @@
-DIST audacious-plugins-3.5.tar.bz2 1710000 SHA256 11bc39e5e386b218db62122411de15363cd5795f2e86ea7989d10d640f2dd4d2 SHA512 a8d5ef947661f77dc74cbdca19025390b55b04f6586b0aeef7899f3d882960653132bb7b0f9a306bf9c173dd8e855476a50c2740d6c0de5ebb9c2f631b909b1a WHIRLPOOL bbf2b4418a158835a28a6d57f8867999be57081e4c5f9df47024a4fcc964168d8bf0225dd6d750ad7eb95e8916bf0f109ab978a7cd7401bb3eed586e07bcadfd
+DIST audacious-plugins-3.5.1.tar.bz2 1714137 SHA256 e6da3346df520f3c6cee3c3706eb09290840ea12dfff28d6bec32e5842dc9e26 SHA512 6359edd6c89220f110dc20cf52418b741cfbbce4618f6ba4e4c97d6656216575aba1dfa8e7de4f11a24a28a27cc008e2f7e551759185972a17748f7e043b8823 WHIRLPOOL e4885108904f0badf81411040e1a5098190ab4dd4b53b14ddb5c39148dc01f982a95d1143ff2d8dd9e9cfbad75fa40654791dcf2a7e21d95e80c3ec0d484d218
